[package]
name = "annotated-s4-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
burn = "0.13.2"
ndarray = "0.15.6"
ndarray-rand = "0.14.0"
ndarray-linalg = { version = "0.16.0", features = ["openblas-system"] }
